Sat Aug 03 18:50:11 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* orbsvcs/PSS/PSDL.dsp:
	* orbsvcs/PSS/PSDL_Parser.dsp:
	* orbsvcs/PSS/PSDL_Datastore.dsp: Fixed the path to
	  TAO_Svc_Utils.lib in the release configuration.

Sat Aug  3 18:20:23 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* orbsvcs/examples/PSS/Client.dsp:
	* orbsvcs/examples/PSS/Server.dsp:
	* orbsvcs/examples/PSS/PSS.dsw: Removed these files from the
	  repo. The Win32 builds had problems groking these files and were
	  giving a tough time to the builds. 

Sat Aug  3 14:34:59 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tests/Makefile: The directory Smart_Proxies had two
	  entries. Removed one of them.

Sat Aug 03 12:42:43 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tao/Thread_Lane_Resources.cpp: Delete the allocators from the
	  lane only after closing down the Reactor and Transport
	  cache. Contents of Reactor or Transport cache, like the event
	  handler and the transport could be using the allocators to
	  release memory. The allocator needs to be around till then! 

Sat Aug  3 09:15:03 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* orbsvcs/PSS/PSDL_Node_Visitor.cpp (visit_export_dcl): Fixed
	  unreachable statement warnings with TRU 64 builds.

Sat Aug  3 09:08:56 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* examples/AMH/Sink_Server/client.cpp: Fixed warnings from
	  explicit template builds.

Sat Aug  3 08:08:48 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* examples/AMH/Sink_Server/Base_Server.cpp: Fixed a "reaches end
	  of non-void" function warning in g++ builds.

Fri Aug  2 17:44:37 2002  Ossama Othman  <ossama@uci.edu>

	* docs/releasenotes/index.html:

	  Updated security service release notes.

Fri Aug  2 17:27:12 2002  Ossama Othman  <ossama@uci.edu>

	* docs/releasenotes/index.html:

	  Updated load balancer release notes.

Fri Aug  2 16:51:23 2002  Ossama Othman  <ossama@uci.edu>
